<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/costumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            android:text="Order"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:text="@string/type_of_order"
            android:textSize="18dp" />

        <RadioGroup
            android:id="@+id/radio_group_ordertype"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delivery" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pickup" />
        </RadioGroup>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="#D2D5BAEF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pickup_date"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date" />

        <EditText
            android:id="@+id/date_id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:hint="dd/mm/yyyy" />
        />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#D2D5BAEF" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pickup_time"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            android:text="Time" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_baseline_access_time_24"
            android:hint="9:49 PM        " />

    </LinearLayout>

    <Button
        android:id="@+id/bt_next_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="69dp"
        android:text="Next" />
</RelativeLayout>