<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="70dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/placeholderimages" />

                <TextView
                    android:id="@+id/product_title_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/textView_price_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="price"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="19dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Size"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20dp"
            android:text="Qty" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_less"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />

                    <TextView
                        android:id="@+id/textView_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="+" />

                </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="Flavor"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_chocolate_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="Chocolate" />

            <CheckBox
                android:id="@+id/checkBox_mocha_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mocha" />

            <CheckBox
                android:id="@+id/checkBox_marble_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marble" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkBox_dd_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/double_dutch" />

        </LinearLayout>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/icing"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_chocolate_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chocolate" />

            <CheckBox
                android:id="@+id/checkBox_caramel_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Caramel" />

            <CheckBox
                android:id="@+id/checkBox_strawberry_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Strawberry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_venilla_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vanilla" />

        </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/button_add_to_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="37dp"
        android:text="ADD To Cart" />

</RelativeLayout>